fix spacing of response button icons on contact form

--- a/assets/sass/theme/_screen.scss
+++ b/assets/sass/theme/_screen.scss
@@ -1156,9 +1156,13 @@ header {
 		}
 		&.success {
 			background: linear-gradient(green, darken(green, 5%));
+			margin: 0;
+			padding: 0;
 		}
 		&.error {
 			background: linear-gradient(red, darken(red, 5%));
+			margin: 0;
+			padding: 0;
 		}
 	}
 	#dropdown {
